--- a/src/components/ShowMoreButton/ShowMoreButton.module.scss
+++ b/src/components/ShowMoreButton/ShowMoreButton.module.scss
@@ -14,6 +14,7 @@
   font-weight: 700;
   line-height: 20px;
   padding: 20px 0;
+  transition: opacity $trans-default;
 
   @media (max-width: ($vp-1024 - 1)) {
     margin: 27px auto 0 0.7%;
@@ -36,15 +37,11 @@
   }
 
   &:hover:enabled {
-    svg {
-      opacity: 0.6;
-    }
+    opacity: 0.6;
   }
 
   &:active:enabled {
-    svg {
-      opacity: 0.3;
-    }
+    opacity: 0.3;
   }
 
   &:disabled {
