--- a/src/components/StepTwo/StepTwo.module.scss
+++ b/src/components/StepTwo/StepTwo.module.scss
@@ -108,6 +108,9 @@
   align-items: center;
   justify-content: space-between;
   padding-top: 42px;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 10px;
 
   @media (max-width: ($vp-1024 - 1)) {
     padding-top: 35px;
